--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,13 @@
   <link rel="icon" type="image/x-icon" href="assets/img/ico.ico">
 
   <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/pace-theme.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+    <script src="assets/js/pace.js"></script>
+  </app-root>
 </body>
 </html>
