--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Maisqueum</title>
+  <title>+Q1</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,7 +10,6 @@
 
   <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/pace-theme.css">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 </head>
 <body>
